# go2_odometry

./: CMakeLists.txt  README.md  package.xml
launch/: go2_full_odometry.launch.py  go2_mocap.launch.py  go2_odometry_switch.launch.py  go2_state_publisher.launch.py
msg/: OdometryVector.msg
ressources/: Go2-Vicon-Body.vsk
scripts/: dumb_odom.py  feet_to_odom_inekf.py  inekf_odom.py  mocap_base_pose.py  simulation_args.py  simulation_utils.py
src/: fake_imu_data.cpp  go2_imu_preint.cpp  inekf.cpp
